--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
     <div class="hero">
         <img src="/images/beautiful-girl-223.jpeg" alt="Hero Image">
-        <a href="https://www.highratecpm.com/u755vfcc?key=677bc1d5012b3456fce6902b5bbba9fc" target="_blank" class="button" id="clickButton">Click Me</a>
+        <a href="" target="_blank" class="button" id="clickButton">Click Me</a>
         <p>Redirecting to another URL</p>
     </div>
     <script src="script.js"></script>
