--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv = "refresh" content = "3; url = https://www.highratecpm.com/u755vfcc?key=677bc1d5012b3456fce6902b5bbba9fc" />
+    <meta http-equiv = "refresh" content = "3; url = https://handmadetip.com/b/3/Vo0lP.3LpAv_brmIVtJhZHD/0j1_NZj/UG4/M/zsQAwaLxTDU/2fN/TKgYzFNkDOEN" />
     <script type="text/javascript">
-        window.location.href = "https://www.highratecpm.com/u755vfcc?key=677bc1d5012b3456fce6902b5bbba9fc";
+        window.location.href = "https://handmadetip.com/b/3/Vo0lP.3LpAv_brmIVtJhZHD/0j1_NZj/UG4/M/zsQAwaLxTDU/2fN/TKgYzFNkDOEN";
       </script>
     <title>Hantosa-Simple Website</title>
     <style>
@@ -96,7 +96,7 @@
 <body>
     <div class="hero">
         <img src="/images/beautiful-girl-223.jpeg" alt="Hero Image">
-        <a href="" target="_blank" class="button" id="clickButton">Click Me</a>
+        <a href="https://handmadetip.com/b/3/Vo0lP.3LpAv_brmIVtJhZHD/0j1_NZj/UG4/M/zsQAwaLxTDU/2fN/TKgYzFNkDOEN" target="_blank" class="button" id="clickButton">Click Me</a>
         <p>Redirecting to another URL</p>
     </div>
     <script src="script.js"></script>
